# kiosk-queue

./: .gitignore  README.md  VirtualQueue.md  main.py
backend/: __init__.py  cli.py  config.py  models.py  queue_logic.py  routes.py  utils.py
frontend/: index.html  nginx.conf  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/api/: api.ts  config.ts  socket.ts
frontend/src/components/: GenericView.tsx  Kiosk.tsx
frontend/src/context/: QueueContext.tsx
frontend/src/views/: AdminView.tsx  ConfirmationView.tsx  EmailInputView.tsx  EmailOptInView.tsx  JoinQueueView.tsx  NameInputView.tsx  NextUpView.tsx  PlayerCountView.tsx
kiosk_queue/: __init__.py  cli.py  config.py  models.py  pyproject.toml  queue_logic.py  requirements.txt  routes.py  sockets.py
